Loris -- History of visible changes.

Loris is Copyright (C) 1999-2001 by Kelly Fitz and Lippold Haken 
<loris@cerlsoundgroup.org>.
See the end for copying conditions.

Please send Loris bug reports to loris@cerlsoundgroup.org.

-------------------------------------------------------
changes since 1.0beta9 release:

- Updated documentation (finally) including C++
API documentation (finally).

- added assignment operator to Oscillator so that STL
containers of them can be used

- made FrequencyReference a subclass (implementor) of 
the Envelope interface, restricted access to its 
BreakpointEnvelope to const.

- made FrequencyReference use all Breakpoints in the 
reference Partial when the number of samples is not
specified.

- Sieve no longer sorts Partial list, and therefore no
longer needs the list itself as an argument to sift(),
can pass just iterators.

- Greatly improved the Sieve interface, made it generic
(container-type independent).

- Morpher interface radically improved to expose much 
more morphing functionality. 

- Added PartialPtrs class, a container of pointers to 
Partials, used internally to make algorithms more generic.

- Removed FadeTime() member from class Partial, added fade 
time as a parameter to classes Distiller, Synthesizer, and
Sieve (replacing minGapTime, which is twice the fade time).

-------------------------------------------------------
changes since 1.0beta8 release:

- fixed Dilator to insert Breakpoints in new Partials at 
times corresponding to dilation target time points. Without
these new Breakpoints, and since our Breakpoints are 
non-uniformly distributed in time, Partials could go
breifly out of tune with each other as a result of 
dilation.

- added PartialList.h defining the type PartialList as
a name for std::list< Partial >, in the Loris namespace.

- replaced all instances of #if HAVE_M_PI with 
#if defined(HAVE_M_PI) && (HAVE_M_PI), which seems 
better.

- put everything in procedural interface (loris.h) in